--- a/device-where/device-where/Base.lproj/Main.storyboard
+++ b/device-where/device-where/Base.lproj/Main.storyboard
@@ -1,26 +1,98 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zIO-vF-Lcc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Overview-->
+        <scene sceneID="J9b-ZP-5x2">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DeviceOverviewViewController" id="QyZ-zT-brV" customClass="DeviceOverviewViewController" customModule="device_where" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="Q1M-XW-Zud"/>
+                        <viewControllerLayoutGuide type="bottom" id="SOW-rO-kEB"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="rwe-j2-W7e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2eq-RW-UZa">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2eq-RW-UZa" firstAttribute="top" secondItem="Q1M-XW-Zud" secondAttribute="bottom" id="21a-eP-nCh"/>
+                            <constraint firstAttribute="trailing" secondItem="2eq-RW-UZa" secondAttribute="trailing" id="Dv2-DZ-U77"/>
+                            <constraint firstItem="SOW-rO-kEB" firstAttribute="top" secondItem="2eq-RW-UZa" secondAttribute="bottom" id="MU9-d3-rTg"/>
+                            <constraint firstItem="2eq-RW-UZa" firstAttribute="leading" secondItem="rwe-j2-W7e" secondAttribute="leading" id="Oab-iX-Bng"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Overview" id="dRI-o4-rMJ"/>
+                    <navigationItem key="navigationItem" title="Overview" id="04c-Lm-Sb4"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="2eq-RW-UZa" id="ALD-9f-uq4"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fc2-Nd-ntT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="855" y="555"/>
+        </scene>
+        <!--My Devices-->
+        <scene sceneID="4vu-Y9-83E">
+            <objects>
+                <viewController storyboardIdentifier="MyDevicesViewController" id="juR-5W-Y1q" customClass="MyDevicesViewController" customModule="device_where" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7pP-e3-T4N"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q6D-ex-OLJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NDk-uL-7FK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="crv-Ay-Mg7">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="crv-Ay-Mg7" firstAttribute="leading" secondItem="NDk-uL-7FK" secondAttribute="leading" id="72g-QP-ogl"/>
+                            <constraint firstAttribute="trailing" secondItem="crv-Ay-Mg7" secondAttribute="trailing" id="82S-Ms-uxB"/>
+                            <constraint firstItem="crv-Ay-Mg7" firstAttribute="top" secondItem="7pP-e3-T4N" secondAttribute="bottom" id="Dg6-dl-aSw"/>
+                            <constraint firstItem="Q6D-ex-OLJ" firstAttribute="top" secondItem="crv-Ay-Mg7" secondAttribute="bottom" id="hJU-la-NHB"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="My Devices" id="ihp-ek-rN9"/>
+                    <navigationItem key="navigationItem" title="My Devices" id="vmW-BU-CoT"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="crv-Ay-Mg7" id="yI7-Yz-svL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KdD-dd-GgY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="855" y="-99"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="9kd-yz-WZw">
+            <objects>
+                <tabBarController id="zIO-vF-Lcc" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="IzO-gw-hQZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="juR-5W-Y1q" kind="relationship" relationship="viewControllers" id="qfr-aD-cyy"/>
+                        <segue destination="QyZ-zT-brV" kind="relationship" relationship="viewControllers" id="Nju-BM-vXF"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o7k-Uh-lxE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-98" y="228"/>
         </scene>
     </scenes>
 </document>
